--- a/desingOh/default.css
+++ b/desingOh/default.css
@@ -257,6 +257,7 @@ main {
 
 .fa-heart {
   font-size: 1.35rem;
+  cursor: pointer;
 }
 
 .fa-heart-1 {
@@ -360,19 +361,23 @@ footer a {
   padding: 1.5rem 0 0.5rem 0;
 }
 
-.header_paletteDuGout img {
-  width: 40%;
+.header_paletteDuGout .logo {
+  width: 35%;
+  margin: 0 auto;
 }
 
 .header_paletteDuGout .fa-arrow-left {
-  cursor: pointer;
   width: 30%;
-  padding-right: 6rem;
   padding-left: 2rem;
-  font-size: 3vh;
+  font-size: 2.5vh;
+  color: black;
 }
 
-.paletteDuGout_img {
+.restaurant {
+  padding: 0 0.031rem;
+}
+
+.restaurant .paletteDuGout_img {
   width: 1500px;
   max-width: 100%;
   height: 20rem;
@@ -383,8 +388,41 @@ footer a {
   margin: 0 auto;
 }
 
-.restaurant {
-  padding: 0 0.031rem;
+.restaurant .menu {
+  margin: 0 auto;
+  max-width: 1500px;
+}
+
+.restaurant .menu h4 {
+  font-family: "Roboto";
+  font-weight: 700;
+}
+
+.restaurant .menu P {
+  font-family: "Roboto";
+  font-weight: 400;
+}
+
+.restaurant .menu .trait {
+  width: 3rem;
+  border: 2px solid var(--tertiaire);
+}
+
+.restaurant .menu .menuDescription {
+  background-color: white;
+  padding: 1rem;
+  margin: 1rem 0;
+  border-radius: 1rem;
+}
+
+.restaurant .menu .menuDescription .menuDescriptionPrix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0.3rem 0 0 0;
 }
 
 .restaurant .restaurantEntresPlats {
@@ -405,50 +443,13 @@ footer a {
           align-items: center;
   padding: 1rem;
   max-width: 900px;
-  margin: 0 auto;
+  margin: 0.5rem auto;
 }
 
 .restaurant .restaurantEntresPlats .nomDuRestaurant_titre h2 {
   font-family: "Shrikhand";
   font-size: 1.5rem;
   font-weight: normal;
-}
-
-.menu {
-  margin: 0 auto;
-  max-width: 1500px;
-}
-
-.menu h4 {
-  font-family: "Roboto";
-  font-weight: 700;
-}
-
-.menu P {
-  font-family: "Roboto";
-  font-weight: 400;
-}
-
-.menu .trait {
-  width: 3rem;
-  border: 2px solid var(--tertiaire);
-}
-
-.menu .menuDescription {
-  background-color: white;
-  padding: 1rem;
-  margin: 1rem 0;
-  border-radius: 1rem;
-}
-
-.menu .menuDescription .menuDescriptionPrix {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0.3rem 0 0 0;
 }
 
 .commander {
@@ -465,6 +466,7 @@ footer a {
   border-radius: 1.5rem;
   color: white;
   background-color: var(--secondaire);
+  cursor: pointer;
 }
 
 @media screen and (min-width: 650px) {
@@ -496,6 +498,31 @@ footer a {
     padding: 0.5rem 2.5rem;
     border-radius: 0.5rem;
     font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nomDuRestaurant_titre {
+    background-color: var(--secondaire);
+    border-radius: 1.5rem;
+    margin: auto;
+  }
+  .nomDuRestaurant_titre .heartHover {
+    background-color: var(--secondaire);
+  }
+  .menu {
+    /*	background-color: chartreuse;*/
+    margin: 0rem auto;
+    padding-top: 1.5rem;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .menu .carteMenu {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+  }
+  .menu .carteMenuEntree {
+    margin-right: 1rem;
   }
 }
 /*# sourceMappingURL=default.css.map */
