--- a/desingOh/default.scss
+++ b/desingOh/default.scss
@@ -217,6 +217,7 @@ main {
 
 .fa-heart {
 	font-size: 1.35rem;
+	cursor: pointer;
 }
 
 .fa-heart-1 {
@@ -291,30 +292,58 @@ footer {
 	width: 100%;
 	max-width: 1500px;
 	padding: 1.5rem 0 0.5rem 0;
-	img {
-		width: 40%;
+	.logo {
+		width: 35%;
+		margin: 0 auto;
 	}
 	.fa-arrow-left {
-		cursor: pointer;
 		width: 30%;
-		padding-right: 6rem;
 		padding-left: 2rem;
-		font-size: 3vh;
+		font-size: 2.5vh;
+		color: black;
 	}
-}
-
-.paletteDuGout_img {
-	width: 1500px;
-	max-width: 100%;
-	height: 20rem;
-	object-fit: cover;
-	position: relative;
-	z-index: -4;
-	margin: 0 auto;
 }
 
 .restaurant {
 	padding: 0 0.031rem;
+	.paletteDuGout_img {
+		width: 1500px;
+		max-width: 100%;
+		height: 20rem;
+		object-fit: cover;
+		position: relative;
+		z-index: -4;
+		margin: 0 auto;
+	}
+	.menu {
+		margin: 0 auto;
+		max-width: 1500px;
+		h4 {
+			font-family: "Roboto";
+			font-weight: 700;
+		}
+		P {
+			font-family: "Roboto";
+			font-weight: 400;
+		}
+
+		.trait {
+			width: 3rem;
+			border: 2px solid var(--tertiaire);
+		}
+		.menuDescription {
+			background-color: white;
+			padding: 1rem;
+			margin: 1rem 0;
+			border-radius: 1rem;
+
+			.menuDescriptionPrix {
+				display: flex;
+				justify-content: space-between;
+				padding: 0.3rem 0 0 0;
+			}
+		}
+	}
 	.restaurantEntresPlats {
 		background-color: rgb(242, 242, 242);
 		margin-top: -4rem;
@@ -326,7 +355,7 @@ footer {
 			align-items: center;
 			padding: 1rem;
 			max-width: 900px;
-			margin: 0 auto;
+			margin: 0.5rem auto;
 			h2 {
 				font-family: "Shrikhand";
 				font-size: 1.5rem;
@@ -335,35 +364,7 @@ footer {
 		}
 	}
 }
-.menu {
-	margin: 0 auto;
-	max-width: 1500px;
-	h4 {
-		font-family: "Roboto";
-		font-weight: 700;
-	}
-	P {
-		font-family: "Roboto";
-		font-weight: 400;
-	}
 
-	.trait {
-		width: 3rem;
-		border: 2px solid var(--tertiaire);
-	}
-	.menuDescription {
-		background-color: white;
-		padding: 1rem;
-		margin: 1rem 0;
-		border-radius: 1rem;
-
-		.menuDescriptionPrix {
-			display: flex;
-			justify-content: space-between;
-			padding: 0.3rem 0 0 0;
-		}
-	}
-}
 .commander {
 	max-width: 1500px;
 	margin: 1rem auto;
@@ -376,6 +377,7 @@ footer {
 		border-radius: 1.5rem;
 		color: white;
 		background-color: var(--secondaire);
+		cursor: pointer;
 	}
 }
 
@@ -404,6 +406,28 @@ footer {
 			padding: 0.5rem 2.5rem;
 			border-radius: 0.5rem;
 			font-size: 1.4rem;
+		}
+	}
+}
+@media screen and (min-width: 1200px) {
+	.nomDuRestaurant_titre {
+		background-color: var(--secondaire);
+		border-radius: 1.5rem;
+		margin: auto;
+		.heartHover {
+			background-color: var(--secondaire);
+		}
+	}
+	.menu {
+		/*	background-color: chartreuse;*/
+		margin: 0rem auto;
+		padding-top: 1.5rem;
+		flex-wrap: nowrap;
+		.carteMenu {
+			flex-basis: 30%;
+		}
+		.carteMenuEntree {
+			margin-right: 1rem;
 		}
 	}
 }
