--- a/desingOh/default.css
+++ b/desingOh/default.css
@@ -10,28 +10,34 @@
   --tertiaire: #99e2d0;
   --blanc: #ffffff;
   --noir: #000000;
-  --gray: gray;
+  --background: rgb(250, 247, 247);
 }
 
 h3 {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 100;
   padding-bottom: 0.2rem;
 }
 
+h2,
 h4 {
-  font-family: 'Roboto';
-  font-weight: 400;
+  font-family: "Roboto";
+  font-weight: normal;
 }
 
 .header {
+  background-color: var(--background);
   margin: 0 auto;
   max-width: 1500px;
   padding: 1.5rem 0 0.5rem 0;
-  background-color: var(--blanc);
 }
 
 .header h1 {
+  text-align: center;
+}
+
+.header h1 .logo {
+  width: 25vh;
   text-align: center;
 }
 
@@ -46,8 +52,8 @@ main {
   padding: 1rem;
   background-color: #e6e6e6;
   text-align: center;
-  -webkit-box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.77);
-          box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.77);
+  -webkit-box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
+          box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
 }
 
 .section_location h4 {
@@ -59,7 +65,7 @@ main {
 }
 
 .section_presentation {
-  background-color: var(--blanc);
+  background-color: var(--background);
   margin: 0 auto;
   max-width: 1500px;
   padding: 2rem 1rem;
@@ -67,13 +73,13 @@ main {
 }
 
 .section_presentation h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
 .section_presentation h4 {
-  font-family: 'Roboto';
-  font-size: 1.4rem;
+  font-family: "Roboto";
+  font-size: 1.3rem;
   font-weight: 100;
   margin: 1.5rem 0;
 }
@@ -81,17 +87,18 @@ main {
 .section_presentation .btn {
   padding: 1rem 2rem;
   margin: 0.5rem 0 1rem 0;
+  font-family: "Roboto";
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: normal;
   border-radius: 2rem;
   border: none;
-  background-color: var(--primaire);
+  background-color: var(--secondaire);
   color: white;
 }
 
 .section_fonctionnement {
-  background-color: brown;
-  margin: 1rem auto;
+  /*	background-color: brown;*/
+  margin: 0 auto;
   max-width: 1500px;
   padding: 1rem;
 }
@@ -100,30 +107,38 @@ main {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   padding: 1rem;
+  font-family: "Roboto";
+  font-weight: bold;
 }
 
 .section_btn {
-  background-color: yellow;
+  /*	background-color: yellow;*/
+  font-family: "Roboto";
+  font-weight: normal;
 }
 
 .section_btn .section_fonctionnement_btn {
-  background-color: #e6e6e6;
+  background-color: #faf7f7;
   margin: 1rem;
   padding: 1.5rem;
   border-radius: 1.5rem;
+}
+
+.section_btn .btn_action_3 {
+  background-color: #f7e4f7;
 }
 
 .section_btn .section_fonctionnement_btn_etapes {
   background-color: var(--primaire);
   color: white;
   border-radius: 50%;
-  padding: 0.6rem;
+  padding: 0.4rem 0.6rem;
   margin-left: -2rem;
 }
 
 .section_btn .fas {
   margin: 0 1rem;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 
 .section_btn .fa-store {
@@ -135,8 +150,11 @@ main {
   font-weight: bold;
 }
 
-@media screen and (min-width: 750px) {
-  .section_btn {
+@media screen and (min-width: 800px) {
+  .section_fonctionnement {
+    background-color: var(--background);
+  }
+  .section_fonctionnement .section_btn {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -144,21 +162,38 @@ main {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  .section_fonctionnement_btn {
+  .section_fonctionnement .section_btn .section_fonctionnement_btn {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
+    background-color: #f7e4f7;
   }
 }
 
 .section_restaurants {
-  background-color: #a1e912;
-  margin: 1rem auto;
+  /*	background-color: rgb(161, 233, 18);*/
+  background-color: var(--background);
+  margin: 0 auto;
   max-width: 1500px;
   padding: 1rem;
+  font-family: "Roboto";
+}
+
+.section_restaurants .carte_description_1 {
+  font-family: "Roboto";
+  color: black;
+  padding-bottom: 1rem;
+}
+
+.section_restaurants .carte_description_1 h4 {
+  font-weight: bold;
+  font-size: 1.2rem;
 }
 
 .section_restaurants h2 {
+  font-family: "Roboto";
+  font-weight: 550;
+  font-size: 1.5rem;
   padding: 1rem;
 }
 
@@ -176,12 +211,13 @@ main {
 .section_restaurants .section_restaurants_carte {
   background-color: white;
   width: 19rem;
-  height: 16rem;
+  height: 17rem;
   border-radius: 1.5rem;
   margin: 1rem;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  position: relative;
 }
 
 .section_restaurants .section_restaurants_carte img {
@@ -190,6 +226,23 @@ main {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 1.5rem 1.5rem 0 0;
+}
+
+.section_restaurants .section_restaurants_carte .nouveau {
+  background-color: var(--tertiaire);
+  color: #1aa94e;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: "Roboto";
+  width: 4.5rem;
+  padding: 0.3rem;
+  text-align: center;
+  position: absolute;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  z-index: 100;
+  bottom: 83%;
+  left: 68%;
 }
 
 .section_restaurants_carte_description {
@@ -202,20 +255,15 @@ main {
   padding: 1rem;
 }
 
-.nouveau {
-  background-color: var(--tertiaire);
-  width: 4.5rem;
-  padding: 0.3rem;
-  text-align: center;
-  position: absolute;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+.fa-heart {
+  font-size: 1.35rem;
+  cursor: pointer;
 }
 
 .fa-heart-1 {
   color: black;
   z-index: -10;
-  margin-right: -1.2rem;
+  margin-right: -1.6rem;
 }
 
 .heartHover {
@@ -244,10 +292,11 @@ main {
 }
 
 footer {
-  background-color: #131212;
+  background-color: #303030;
 }
 
 footer .footer {
+  font-family: "Roboto";
   margin: 0 auto;
   max-width: 1500px;
   padding: 2rem 1rem;
@@ -266,14 +315,16 @@ footer .footer {
 }
 
 footer .fas {
-  padding: 1rem 1rem 1rem 0;
+  padding: 0.5rem 1rem 0.5rem 0;
 }
 
 footer .mentionsLegales {
-  padding: 1rem 1rem 1rem 0;
+  padding: 0.5rem 0.5rem 0.5rem 0;
 }
 
 footer .footer_header {
+  font-family: "Shrikhand";
+  font-weight: normal;
   margin: 0 1rem 1rem 0;
   font-size: 1.5rem;
   width: 100%;
@@ -310,19 +361,23 @@ footer a {
   padding: 1.5rem 0 0.5rem 0;
 }
 
-.header_paletteDuGout img {
-  width: 40%;
+.header_paletteDuGout .logo {
+  width: 35%;
+  margin: 0 auto;
 }
 
 .header_paletteDuGout .fa-arrow-left {
-  cursor: pointer;
   width: 30%;
-  padding-right: 6rem;
   padding-left: 2rem;
-  font-size: 3vh;
+  font-size: 2.5vh;
+  color: black;
 }
 
-.paletteDuGout_img {
+.restaurant {
+  padding: 0 0.031rem;
+}
+
+.restaurant .paletteDuGout_img {
   width: 1500px;
   max-width: 100%;
   height: 20rem;
@@ -333,8 +388,41 @@ footer a {
   margin: 0 auto;
 }
 
-.restaurant {
-  padding: 0 .031rem;
+.restaurant .menu {
+  margin: 0 auto;
+  max-width: 1500px;
+}
+
+.restaurant .menu h4 {
+  font-family: "Roboto";
+  font-weight: 700;
+}
+
+.restaurant .menu P {
+  font-family: "Roboto";
+  font-weight: 400;
+}
+
+.restaurant .menu .trait {
+  width: 3rem;
+  border: 2px solid var(--tertiaire);
+}
+
+.restaurant .menu .menuDescription {
+  background-color: white;
+  padding: 1rem;
+  margin: 1rem 0;
+  border-radius: 1rem;
+}
+
+.restaurant .menu .menuDescription .menuDescriptionPrix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0.3rem 0 0 0;
 }
 
 .restaurant .restaurantEntresPlats {
@@ -355,53 +443,13 @@ footer a {
           align-items: center;
   padding: 1rem;
   max-width: 900px;
-  margin: 0 auto;
-  /*	i{
-					font-size: 1.5rem;
-				}*/
+  margin: 0.5rem auto;
 }
 
 .restaurant .restaurantEntresPlats .nomDuRestaurant_titre h2 {
-  font-family: 'Shrikhand';
+  font-family: "Shrikhand";
   font-size: 1.5rem;
   font-weight: normal;
-}
-
-.menu {
-  margin: 0 auto;
-  max-width: 1500px;
-}
-
-.menu h4 {
-  font-family: 'Roboto';
-  font-weight: 700;
-}
-
-.menu P {
-  font-family: 'Roboto';
-  font-weight: 400;
-}
-
-.menu .trait {
-  width: 3rem;
-  border: 2px solid var(--tertiaire);
-}
-
-.menu .menuDescription {
-  background-color: white;
-  padding: 1rem;
-  margin: 1rem 0;
-  border-radius: 1rem;
-}
-
-.menu .menuDescription .menuDescriptionPrix {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0.3rem 0 0 0;
 }
 
 .commander {
@@ -418,6 +466,7 @@ footer a {
   border-radius: 1.5rem;
   color: white;
   background-color: var(--secondaire);
+  cursor: pointer;
 }
 
 @media screen and (min-width: 650px) {
@@ -449,6 +498,31 @@ footer a {
     padding: 0.5rem 2.5rem;
     border-radius: 0.5rem;
     font-size: 1.4rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nomDuRestaurant_titre {
+    background-color: var(--secondaire);
+    border-radius: 1.5rem;
+    margin: auto;
+  }
+  .nomDuRestaurant_titre .heartHover {
+    background-color: var(--secondaire);
+  }
+  .menu {
+    /*	background-color: chartreuse;*/
+    margin: 0rem auto;
+    padding-top: 1.5rem;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  .menu .carteMenu {
+    -ms-flex-preferred-size: 30%;
+        flex-basis: 30%;
+  }
+  .menu .carteMenuEntree {
+    margin-right: 1rem;
   }
 }
 /*# sourceMappingURL=default.css.map */
