--- a/desingOh/default.scss
+++ b/desingOh/default.scss
@@ -10,25 +10,30 @@
 	--tertiaire: #99e2d0;
 	--blanc: #ffffff;
 	--noir: #000000;
-	--gray: gray;
+	--background: rgb(250, 247, 247);
 }
-h3{
-	font-family: 'Roboto';
+h3 {
+	font-family: "Roboto";
 	font-weight: 100;
 	padding-bottom: 0.2rem;
 }
-h4{
-font-family: 'Roboto';
-font-weight: 400;
+h2,
+h4 {
+	font-family: "Roboto";
+	font-weight: normal;
 }
 
 .header {
+	background-color: var(--background);
 	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1.5rem 0 0.5rem 0;
-	background-color: var(--blanc);
 	h1 {
 		text-align: center;
+		.logo {
+			width: 25vh;
+			text-align: center;
+		}
 	}
 }
 main {
@@ -41,7 +46,7 @@ main {
 	padding: 1rem;
 	background-color: rgb(230, 230, 230);
 	text-align: center;
-	box-shadow: 0px -2px 1px 1px rgba(0, 0, 0, 0.77);
+	box-shadow: 0px -2px 1px 1px rgba(148, 143, 143, 0.77);
 	h4 {
 		font-size: 1.5rem;
 	}
@@ -51,67 +56,71 @@ main {
 }
 
 .section_presentation {
-	background-color: var(--blanc);
+	background-color: var(--background);
 	margin: 0 auto;
 	max-width: 1500px;
 	padding: 2rem 1rem;
 	text-align: center;
 
 	h2 {
-		font-size: 2rem;
+		font-size: 1.5rem;
 		font-weight: bold;
 	}
 	h4 {
-			
-font-family: 'Roboto';
-
-
-		font-size: 1.4rem;
+		font-family: "Roboto";
+		font-size: 1.3rem;
 		font-weight: 100;
 		margin: 1.5rem 0;
 	}
 	.btn {
 		padding: 1rem 2rem;
 		margin: 0.5rem 0 1rem 0;
+		font-family: "Roboto";
 		font-size: 1rem;
-		font-weight: 500;
+		font-weight: normal;
 		border-radius: 2rem;
 		border: none;
-		background-color: var(--primaire);
+		background-color: var(--secondaire);
 		color: white;
 	}
 }
 
 .section_fonctionnement {
-	background-color: brown;
-	margin: 1rem auto;
+	/*	background-color: brown;*/
+	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1rem;
-
 	h2 {
 		flex-basis: 100%;
 		padding: 1rem;
+		font-family: "Roboto";
+		font-weight: bold;
 	}
 }
 .section_btn {
-	background-color: yellow;
+	/*	background-color: yellow;*/
+	font-family: "Roboto";
+	font-weight: normal;
 
 	.section_fonctionnement_btn {
-		background-color: rgb(230, 230, 230);
+		background-color: rgb(250, 247, 247);
 		margin: 1rem;
 		padding: 1.5rem;
 		border-radius: 1.5rem;
+	}
+	.btn_action_3 {
+		background-color: rgb(247, 228, 247);
 	}
 	.section_fonctionnement_btn_etapes {
 		background-color: var(--primaire);
 		color: white;
 		border-radius: 50%;
-		padding: 0.6rem;
+		padding: 0.4rem 0.6rem;
 		margin-left: -2rem;
 	}
 	.fas {
 		margin: 0 1rem;
-		font-size: 1.3rem;
+		font-size: 1.5rem;
 	}
 
 	.fa-store {
@@ -123,23 +132,41 @@ font-family: 'Roboto';
 		font-weight: bold;
 	}
 }
-@media screen and (min-width: 750px) {
-	.section_btn {
-		display: flex;
-		justify-content: space-between;
-	}
-	.section_fonctionnement_btn {
-		flex-grow: 1;
+@media screen and (min-width: 800px) {
+	.section_fonctionnement {
+		background-color: var(--background);
+		.section_btn {
+			display: flex;
+			justify-content: space-between;
+			.section_fonctionnement_btn {
+				flex-grow: 1;
+				background-color: rgb(247, 228, 247);
+			}
+		}
 	}
 }
 
 .section_restaurants {
-	background-color: rgb(161, 233, 18);
-	margin: 1rem auto;
+	/*	background-color: rgb(161, 233, 18);*/
+	background-color: var(--background);
+	margin: 0 auto;
 	max-width: 1500px;
 	padding: 1rem;
+	font-family: "Roboto";
 
+	.carte_description_1 {
+		font-family: "Roboto";
+		color: black;
+		padding-bottom: 1rem;
+		h4 {
+			font-weight: bold;
+			font-size: 1.2rem;
+		}
+	}
 	h2 {
+		font-family: "Roboto";
+		font-weight: 550;
+		font-size: 1.5rem;
 		padding: 1rem;
 	}
 
@@ -151,16 +178,33 @@ font-family: 'Roboto';
 	.section_restaurants_carte {
 		background-color: white;
 		width: 19rem;
-		height: 16rem;
+		height: 17rem;
 		border-radius: 1.5rem;
 		margin: 1rem;
 		flex-grow: 1;
+		position: relative;
 
 		img {
 			width: 100%;
 			height: 12rem;
 			object-fit: cover;
 			border-radius: 1.5rem 1.5rem 0 0;
+		}
+
+		.nouveau {
+			background-color: var(--tertiaire);
+			color: rgb(26, 169, 78);
+			font-size: 1rem;
+			font-weight: 500;
+			font-family: "Roboto";
+			width: 4.5rem;
+			padding: 0.3rem;
+			text-align: center;
+			position: absolute;
+			align-self: flex-end;
+			z-index: 100;
+			bottom: 83%;
+			left: 68%;
 		}
 	}
 }
@@ -170,19 +214,16 @@ font-family: 'Roboto';
 	justify-content: space-between;
 	padding: 1rem;
 }
-.nouveau {
-	background-color: var(--tertiaire);
-	width: 4.5rem;
-	padding: 0.3rem;
-	text-align: center;
-	position: absolute;
-	align-self: flex-end;
+
+.fa-heart {
+	font-size: 1.35rem;
+	cursor: pointer;
 }
 
 .fa-heart-1 {
 	color: black;
 	z-index: -10;
-	margin-right: -1.2rem;
+	margin-right: -1.6rem;
 }
 .heartHover {
 	background-color: white;
@@ -205,8 +246,9 @@ font-family: 'Roboto';
 }
 
 footer {
-	background-color: rgb(19, 18, 18);
+	background-color: rgb(48, 48, 48);
 	.footer {
+		font-family: "Roboto";
 		margin: 0 auto;
 		max-width: 1500px;
 		padding: 2rem 1rem;
@@ -217,12 +259,14 @@ footer {
 		flex-wrap: wrap;
 	}
 	.fas {
-		padding: 1rem 1rem 1rem 0;
+		padding: 0.5rem 1rem 0.5rem 0;
 	}
 	.mentionsLegales {
-		padding: 1rem 1rem 1rem 0;
+		padding: 0.5rem 0.5rem 0.5rem 0;
 	}
 	.footer_header {
+		font-family: "Shrikhand";
+		font-weight: normal;
 		margin: 0 1rem 1rem 0;
 		font-size: 1.5rem;
 		width: 100%;
@@ -230,7 +274,7 @@ footer {
 	.footerInfos {
 		flex-grow: 1;
 	}
-	a{
+	a {
 		color: white;
 	}
 }
@@ -248,82 +292,79 @@ footer {
 	width: 100%;
 	max-width: 1500px;
 	padding: 1.5rem 0 0.5rem 0;
-	img {
-		width: 40%;
+	.logo {
+		width: 35%;
+		margin: 0 auto;
 	}
 	.fa-arrow-left {
-		cursor: pointer;
 		width: 30%;
-		padding-right: 6rem;
 		padding-left: 2rem;
-		font-size: 3vh;
+		font-size: 2.5vh;
+		color: black;
 	}
-}
-
-.paletteDuGout_img {
-	width: 1500px;
-	max-width: 100%;
-	height: 20rem;
-	object-fit: cover;
-	position: relative;
-	z-index: -4;
-	margin: 0 auto;
 }
 
 .restaurant {
-	padding: 0 .031rem;
+	padding: 0 0.031rem;
+	.paletteDuGout_img {
+		width: 1500px;
+		max-width: 100%;
+		height: 20rem;
+		object-fit: cover;
+		position: relative;
+		z-index: -4;
+		margin: 0 auto;
+	}
+	.menu {
+		margin: 0 auto;
+		max-width: 1500px;
+		h4 {
+			font-family: "Roboto";
+			font-weight: 700;
+		}
+		P {
+			font-family: "Roboto";
+			font-weight: 400;
+		}
+
+		.trait {
+			width: 3rem;
+			border: 2px solid var(--tertiaire);
+		}
+		.menuDescription {
+			background-color: white;
+			padding: 1rem;
+			margin: 1rem 0;
+			border-radius: 1rem;
+
+			.menuDescriptionPrix {
+				display: flex;
+				justify-content: space-between;
+				padding: 0.3rem 0 0 0;
+			}
+		}
+	}
 	.restaurantEntresPlats {
 		background-color: rgb(242, 242, 242);
 		margin-top: -4rem;
 		padding: 1rem;
 		border-radius: 2.5rem 2.5rem 0 0;
 		.nomDuRestaurant_titre {
-				display: flex;
-				justify-content: space-around;
-				align-items: center;
-				padding: 1rem;
-				max-width: 900px;
-				margin: 0 auto;
-			h2{
-					font-family: 'Shrikhand' ;
-					font-size: 1.5rem;
-					font-weight:normal;
-				}
-			/*	i{
-					font-size: 1.5rem;
-				}*/
-		}
-	}
-}
-.menu {
-	margin: 0 auto;
-	max-width: 1500px;
-			h4{
-font-family: 'Roboto';
-font-weight: 700;
-}
-P{
-	font-family: 'Roboto';
-font-weight: 400;
-}
-
-	.trait {
-		width: 3rem;
-		border: 2px solid var(--tertiaire);
-	}
-	.menuDescription {
-		background-color: white;
-		padding: 1rem;
-		margin: 1rem 0;
-		border-radius: 1rem;
-
-		.menuDescriptionPrix {
 			display: flex;
-			justify-content: space-between;
-			padding: 0.3rem 0 0 0;
+			justify-content: space-around;
+			align-items: center;
+			padding: 1rem;
+			max-width: 900px;
+			margin: 0.5rem auto;
+			h2 {
+				font-family: "Shrikhand";
+				font-size: 1.5rem;
+				font-weight: normal;
+			}
 		}
 	}
 }
+
 .commander {
 	max-width: 1500px;
 	margin: 1rem auto;
@@ -336,12 +377,11 @@ font-weight: 400;
 		border-radius: 1.5rem;
 		color: white;
 		background-color: var(--secondaire);
+		cursor: pointer;
 	}
 }
 
-
 @media screen and (min-width: 650px) {
-
 	.menu {
 		max-width: 1500px;
 		margin: 0 auto;
@@ -357,7 +397,6 @@ font-weight: 400;
 		.carteMenuDesserts {
 			margin-left: 1rem;
 		}
-
 	}
 
 	.commander {
@@ -369,5 +408,26 @@ font-weight: 400;
 			font-size: 1.4rem;
 		}
 	}
-
+}
+@media screen and (min-width: 1200px) {
+	.nomDuRestaurant_titre {
+		background-color: var(--secondaire);
+		border-radius: 1.5rem;
+		margin: auto;
+		.heartHover {
+			background-color: var(--secondaire);
+		}
+	}
+	.menu {
+		/*	background-color: chartreuse;*/
+		margin: 0rem auto;
+		padding-top: 1.5rem;
+		flex-wrap: nowrap;
+		.carteMenu {
+			flex-basis: 30%;
+		}
+		.carteMenuEntree {
+			margin-right: 1rem;
+		}
+	}
 }
